gh pages config toml changes

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://rosiestquartz.github.io"
 languageCode = "en-us"
 title = "Rose Quartz Foto"
 theme = "sam"
