updated aboutme section with new img and bio, added new photo posts, fixed formatting errors, hidden i'm a designer section for now

--- a/config.toml
+++ b/config.toml
@@ -24,9 +24,9 @@ publishDir = "../portfolio-public"
 	link = "/photography"
 	text = "I'm a photographer"
 
-[[params.mainMenu]]
-	link = "/comingsoon"
-	text = "I'm a designer"
+#[[params.mainMenu]]
+#	link = "/comingsoon"
+#	text = "I'm a designer"
 
 [[params.mainMenu]]
 	link = "/comingsoon"
