properly fixed font includes for headings, biglinks and body, cleaned up font files and public dir

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://rosiestquartz.github.io"
 languageCode = "en-us"
-title = "RosiestQuartz"
+title = "I'm Rosie"
 theme = "sam"
 publishDir = "../portfolio-public"
 
